--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,7 @@
-<h1>タスク新規作成ページ</h1>
-
 <div class="row">
-  <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
+  <div class="col-xs-6">
     <%= form_for(@task) do |f| %>
-      <% if @task.errors.any? %>
+      <% if task.errors.any? %>
         <div id="error_explanation">
           <ul>
             <% @task.errors.full_messages.each do |task| %>
